fixed the z-index error

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -83,7 +83,7 @@ header part css
     align-items: center;
     width: 117px;
     grid-row-gap: 25px;
-    z-index: -1;
+    z-index: 0;
 
 }
 .blog-details{
